markup description area

--- a/src/markup.html
+++ b/src/markup.html
@@ -16,7 +16,24 @@
         </div>
         <div class="bp_pointer"></div>
     </div>
-    <div class="bp_descripter"></div>
+    <div class="bp_descripter">
+        <div class="bp_target_panel">
+            <h2>Target Code Segment</h2>
+            <div class="bp_segment">
+                <img src="img/code_segment.png">
+            </div>
+        </div>
+
+        <dl class="bp_status_panel">
+            <dt>
+                Remaining Code
+            </dt>
+            <dd>
+                <img src="img/remained_code.png"/>
+            </dd>
+        </dl>
+
+    </div>
     <div class="bp_slider"></div>
     <div class="bp_footer"></div>
 </div>
