markup 뷰 거의 끝났음.

--- a/src/markup.html
+++ b/src/markup.html
@@ -3,8 +3,8 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>Bypass :: Hack</title>
-    <link rel="stylesheet" href="css/normalize.css" >
-    <link rel="stylesheet" href="css/style.css" >
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <div class="bp_container">
@@ -19,6 +19,7 @@
     <div class="bp_descripter">
         <div class="bp_target_panel">
             <h2>Target Code Segment</h2>
+
             <div class="bp_segment">
                 <img src="img/code_segment.png">
             </div>
@@ -32,9 +33,16 @@
                 <img src="img/remained_code.png"/>
             </dd>
         </dl>
-
     </div>
-    <div class="bp_slider"></div>
+    <div class="bp_slider">
+        <ul>
+            <li><img class="bp_card" src="img/normal_card.png"><img class="bp_card" src="img/normal_card.png"><img class="bp_card" src="img/normal_card.png"></li>
+            <li><img class="bp_card" src="img/normal_card.png"><img class="bp_card" src="img/normal_card.png"><img class="bp_card" src="img/normal_card.png"></li>
+            <li><img class="bp_card" src="img/normal_card.png"><img class="bp_card" src="img/normal_card.png"><img class="bp_card" src="img/normal_card.png"></li>
+            <li><img class="bp_card" src="img/normal_card.png"><img class="bp_card" src="img/normal_card.png"><img class="bp_card" src="img/normal_card.png"></li>
+            <li><img class="bp_card" src="img/normal_card.png"><img class="bp_card" src="img/normal_card.png"><img class="bp_card" src="img/normal_card.png"></li>
+        </ul>
+    </div>
     <div class="bp_footer"></div>
 </div>
 </body>
