--- a/src/markup.html
+++ b/src/markup.html
@@ -21,7 +21,9 @@
             <h2>Target Code Segment</h2>
 
             <div class="bp_segment">
-                <img src="img/code_segment.png">
+                <div>
+                    <img src="img/codes/3.png">
+                </div>
             </div>
         </div>
 
@@ -30,17 +32,19 @@
                 Remaining Code
             </dt>
             <dd>
-                <img src="img/remained_code.png"/>
+                <div><img src="img/codes/10.png"></div>
+                <div></div>
+                <div></div>
             </dd>
         </dl>
     </div>
     <div class="bp_slider">
         <ul>
-            <li><img class="bp_card" src="img/normal_card.png"><img class="bp_card" src="img/normal_card.png"><img class="bp_card" src="img/normal_card.png"></li>
-            <li><img class="bp_card" src="img/normal_card.png"><img class="bp_card" src="img/normal_card.png"><img class="bp_card" src="img/normal_card.png"></li>
-            <li><img class="bp_card" src="img/normal_card.png"><img class="bp_card" src="img/normal_card.png"><img class="bp_card" src="img/normal_card.png"></li>
-            <li><img class="bp_card" src="img/normal_card.png"><img class="bp_card" src="img/normal_card.png"><img class="bp_card" src="img/normal_card.png"></li>
-            <li><img class="bp_card" src="img/normal_card.png"><img class="bp_card" src="img/normal_card.png"><img class="bp_card" src="img/normal_card.png"></li>
+            <li><img class="bp_card" src="img/codes/1.png"><img class="bp_card" src="img/codes/8.png"><img class="bp_card" src="img/codes/9.png"></li>
+            <li><img class="bp_card" src="img/codes/2.png"><img class="bp_card" src="img/codes/3.png"><img class="bp_card" src="img/codes/4.png"></li>
+            <li><img class="bp_card" src="img/codes/5.png"><img class="bp_card" src="img/codes/6.png"><img class="bp_card" src="img/codes/7.png"></li>
+            <li><img class="bp_card" src="img/codes/8.png"><img class="bp_card" src="img/codes/9.png"><img class="bp_card" src="img/codes/10.png"></li>
+            <li><img class="bp_card" src="img/codes/1.png"><img class="bp_card" src="img/codes/2.png"><img class="bp_card" src="img/codes/3.png"></li>
         </ul>
     </div>
     <div class="bp_footer"></div>
