--- a/src/markup.html
+++ b/src/markup.html
@@ -40,11 +40,56 @@
     </div>
     <div class="bp_slider">
         <ul>
-            <li><img class="bp_card" src="img/codes/1.png"><img class="bp_card" src="img/codes/8.png"><img class="bp_card" src="img/codes/9.png"></li>
-            <li><img class="bp_card" src="img/codes/2.png"><img class="bp_card" src="img/codes/3.png"><img class="bp_card" src="img/codes/4.png"></li>
-            <li><img class="bp_card" src="img/codes/5.png"><img class="bp_card" src="img/codes/6.png"><img class="bp_card" src="img/codes/7.png"></li>
-            <li><img class="bp_card" src="img/codes/8.png"><img class="bp_card" src="img/codes/9.png"><img class="bp_card" src="img/codes/10.png"></li>
-            <li><img class="bp_card" src="img/codes/1.png"><img class="bp_card" src="img/codes/2.png"><img class="bp_card" src="img/codes/3.png"></li>
+            <li><div class="bp_card">
+                <div class="bp_card_cover"></div>
+                <img src="img/codes/1.png">
+            </div><div class="bp_card">
+                <div class="bp_card_cover"></div>
+                <img src="img/codes/1.png">
+            </div><div class="bp_card">
+                <div class="bp_card_cover"></div>
+                <img src="img/codes/1.png">
+            </div></li>
+            <li><div class="bp_card">
+                <div class="bp_card_cover"></div>
+                <img src="img/codes/1.png">
+            </div><div class="bp_card">
+                <div class="bp_card_cover"></div>
+                <img src="img/codes/1.png">
+            </div><div class="bp_card">
+                <div class="bp_card_cover"></div>
+                <img src="img/codes/1.png">
+            </div></li>
+            <li><div class="bp_card">
+                <div class="bp_card_cover"></div>
+                <img src="img/codes/1.png">
+            </div><div class="bp_card">
+                <div class="bp_card_cover"></div>
+                <img src="img/codes/1.png">
+            </div><div class="bp_card">
+                <div class="bp_card_cover"></div>
+                <img src="img/codes/1.png">
+            </div></li>
+            <li><div class="bp_card">
+                <div class="bp_card_cover"></div>
+                <img src="img/codes/1.png">
+            </div><div class="bp_card">
+                <div class="bp_card_cover"></div>
+                <img src="img/codes/1.png">
+            </div><div class="bp_card">
+                <div class="bp_card_cover"></div>
+                <img src="img/codes/1.png">
+            </div></li>
+            <li><div class="bp_card">
+                <div class="bp_card_cover"></div>
+                <img src="img/codes/1.png">
+            </div><div class="bp_card">
+                <div class="bp_card_cover"></div>
+                <img src="img/codes/1.png">
+            </div><div class="bp_card">
+                <div class="bp_card_cover"></div>
+                <img src="img/codes/1.png">
+            </div></li>
         </ul>
     </div>
     <div class="bp_footer"></div>
