--- a/src/markup.html
+++ b/src/markup.html
@@ -50,7 +50,7 @@
                 <div class="bp_card_cover"></div>
                 <img src="img/codes/1.png">
             </div></li>
-            <li><div class="bp_card">
+            <li><div class="bp_card bp_selected">
                 <div class="bp_card_cover"></div>
                 <img src="img/codes/1.png">
             </div><div class="bp_card">
@@ -76,7 +76,7 @@
             </div><div class="bp_card">
                 <div class="bp_card_cover"></div>
                 <img src="img/codes/1.png">
-            </div><div class="bp_card">
+            </div><div class="bp_card bp_districted">
                 <div class="bp_card_cover"></div>
                 <img src="img/codes/1.png">
             </div></li>
@@ -91,6 +91,11 @@
                 <img src="img/codes/1.png">
             </div></li>
         </ul>
+        <div class="bp_cursor">
+            <img class="bp_left" src="img/cursor_left.png">
+            <img class="bp_arrow" src="img/cursor_arrow.png">
+            <img class="bp_right" src="img/cursor_right.png">
+        </div>
     </div>
     <div class="bp_footer"></div>
 </div>
