markup TargetPanel, StatusPanel UI 개발

--- a/src/markup.html
+++ b/src/markup.html
@@ -18,13 +18,15 @@
     </div>
     <div class="bp_descripter">
         <div class="bp_target_panel">
-            <h2>Target Code Segment</h2>
+            <h2 class="bp_target_code">Target Code Segment</h2>
 
             <div class="bp_segment">
                 <div>
                     <img src="img/codes/3.png">
                 </div>
             </div>
+
+            <h2 class="bp_firewall_removed">Firewalls removed, full access granted</h2>
         </div>
 
         <dl class="bp_status_panel">
@@ -32,9 +34,18 @@
                 Remaining Code
             </dt>
             <dd>
-                <div><img src="img/codes/10.png"></div>
-                <div></div>
-                <div></div>
+                <div>
+                    <div class="bp_cover"></div>
+                    <div class="img_container"><img src="img/codes/10.png"></div>
+                </div>
+                <div>
+                    <div class="bp_cover"></div>
+                    <div class="img_container"></div>
+                </div>
+                <div>
+                    <div class="bp_cover"></div>
+                    <div class="img_container"></div>
+                </div>
             </dd>
         </dl>
     </div>
