--- a/src/base.html
+++ b/src/base.html
@@ -18,11 +18,15 @@
     </div>
     <div class="bp_descripter">
         <div class="bp_target_panel">
-            <h2>Target Code Segment</h2>
+            <h2 class="bp_target_code">Target Code Segment</h2>
 
             <div class="bp_segment">
-                <img src="img/code_segment.png">
+                <div>
+                    <img src="img/codes/3.png">
+                </div>
             </div>
+
+            <h2 class="bp_firewall_removed">Firewalls removed, full access granted</h2>
         </div>
 
         <dl class="bp_status_panel">
@@ -30,35 +34,86 @@
                 Remaining Code
             </dt>
             <dd>
-                <img src="img/remained_code.png"/>
+                <div>
+                    <div class="bp_cover"></div>
+                    <div class="img_container"><img src="img/codes/10.png"></div>
+                </div>
+                <div>
+                    <div class="bp_cover"></div>
+                    <div class="img_container"></div>
+                </div>
+                <div>
+                    <div class="bp_cover"></div>
+                    <div class="img_container"></div>
+                </div>
             </dd>
         </dl>
     </div>
     <div class="bp_slider">
         <ul>
-            <li><img class="bp_card" src="img/normal_card.png"><img class="bp_card" src="img/normal_card.png"><img class="bp_card" src="img/normal_card.png"></li>
-            <li><img class="bp_card" src="img/normal_card.png"><img class="bp_card" src="img/normal_card.png"><img class="bp_card" src="img/normal_card.png"></li>
-            <li><img class="bp_card" src="img/normal_card.png"><img class="bp_card" src="img/normal_card.png"><img class="bp_card" src="img/normal_card.png"></li>
-            <li><img class="bp_card" src="img/normal_card.png"><img class="bp_card" src="img/normal_card.png"><img class="bp_card" src="img/normal_card.png"></li>
-            <li><img class="bp_card" src="img/normal_card.png"><img class="bp_card" src="img/normal_card.png"><img class="bp_card" src="img/normal_card.png"></li>
+            <li><div class="bp_card">
+                <div class="bp_card_cover"></div>
+                <img src="img/codes/1.png">
+            </div><div class="bp_card">
+                <div class="bp_card_cover"></div>
+                <img src="img/codes/1.png">
+            </div><div class="bp_card">
+                <div class="bp_card_cover"></div>
+                <img src="img/codes/1.png">
+            </div></li>
+            <li><div class="bp_card bp_selected">
+                <div class="bp_card_cover"></div>
+                <img src="img/codes/1.png">
+            </div><div class="bp_card">
+                <div class="bp_card_cover"></div>
+                <img src="img/codes/1.png">
+            </div><div class="bp_card">
+                <div class="bp_card_cover"></div>
+                <img src="img/codes/1.png">
+            </div></li>
+            <li><div class="bp_card">
+                <div class="bp_card_cover"></div>
+                <img src="img/codes/1.png">
+            </div><div class="bp_card">
+                <div class="bp_card_cover"></div>
+                <img src="img/codes/1.png">
+            </div><div class="bp_card">
+                <div class="bp_card_cover"></div>
+                <img src="img/codes/1.png">
+            </div></li>
+            <li><div class="bp_card">
+                <div class="bp_card_cover"></div>
+                <img src="img/codes/1.png">
+            </div><div class="bp_card">
+                <div class="bp_card_cover"></div>
+                <img src="img/codes/1.png">
+            </div><div class="bp_card bp_districted">
+                <div class="bp_card_cover"></div>
+                <img src="img/codes/1.png">
+            </div></li>
+            <li><div class="bp_card">
+                <div class="bp_card_cover"></div>
+                <img src="img/codes/1.png">
+            </div><div class="bp_card">
+                <div class="bp_card_cover"></div>
+                <img src="img/codes/1.png">
+            </div><div class="bp_card">
+                <div class="bp_card_cover"></div>
+                <img src="img/codes/1.png">
+            </div></li>
         </ul>
+        <div class="bp_cursor">
+            <img class="bp_left" src="img/cursor_left.png">
+            <img class="bp_arrow" src="img/cursor_arrow.png">
+            <img class="bp_right" src="img/cursor_right.png">
+        </div>
     </div>
     <div class="bp_footer"></div>
 </div>
-<script type="text/javascript" src="js/lib/require.js">
-</script>
+</body>
+<script type="text/javascript" src="js/lib/require.js"></script>
+<script type="text/javascript" src="js/config.js"></script>
 <script type="text/javascript">
-    require.config({
-        baseUrl : 'js',
-        paths : {
-            'jquery' : 'lib/jquery-1.11.1'
-        },
-        sim : {
-            'jquery' : {
-                exports : 'jQuery'
-            }
-        }
-    });
     require(["app/base"]);
 </script>
 </body>
