--- a/src/base.html
+++ b/src/base.html
@@ -119,7 +119,7 @@
     } else if (location.search.indexOf("test") >= 0) {
         require(["app/test"]);
     } else {
-        require(["app/base"]);
+        require(["js/app/baseOld"]);
     }
 
 </script>
