너무 오래 커밋 안해서 한번 커밋함. - main (base) 작성중. - slider 세팅함 - cursor 동작하도록 만들었음.

--- a/src/markup.html
+++ b/src/markup.html
@@ -52,16 +52,29 @@
     <div class="bp_slider">
         <ul>
             <li><div class="bp_card_outline">
-                <div class="bp_card bp_selected">
-                    <div class="bp_card_cover"></div><img src="img/codes/1.png">
-                </div>
-            </div><div class="bp_card_outline">
                 <div class="bp_cursor">
                     <img class="bp_left" src="img/cursor_left.png">
                     <img class="bp_arrow" src="img/cursor_arrow.png">
                     <img class="bp_right" src="img/cursor_right.png">
                 </div>
+                <div class="bp_card bp_selected">
+                    <div class="bp_card_cover"></div><img src="img/codes/1.png">
+                </div>
+            </div><div class="bp_card_outline">
                 <div class="bp_card">
+                    <div class="bp_card_cover"></div><img src="img/codes/1.png">
+                </div>
+            </div><div class="bp_card_outline">
+                <div class="bp_card">
+                    <div class="bp_card_cover"></div><img src="img/codes/1.png">
+                </div>
+            </div></li>
+            <li><div class="bp_card_outline">
+                <div class="bp_card bp_districted">
+                    <div class="bp_card_cover"></div><img src="img/codes/1.png">
+                </div>
+            </div><div class="bp_card_outline">
+                <div class="bp_card bp_districted bp_unauthorized_access">
                     <div class="bp_card_cover"></div><img src="img/codes/1.png">
                 </div>
             </div><div class="bp_card_outline">
