정상 select 처리함

--- a/src/base.html
+++ b/src/base.html
@@ -22,7 +22,7 @@
 
             <div class="bp_segment">
                 <div>
-                    <img src="img/codes/3.png">
+                    <img>
                 </div>
             </div>
 
@@ -61,7 +61,6 @@
     </div>
     <div class="bp_footer"></div>
 </div>
-</body>
 <script type="text/javascript" src="js/lib/require.js"></script>
 <script type="text/javascript" src="js/config.js"></script>
 <script type="text/javascript">
