--- a/src/markup.html
+++ b/src/markup.html
@@ -27,6 +27,7 @@
             </div>
 
             <h2 class="bp_firewall_removed">Firewalls removed, full access granted</h2>
+            <h2 class="bp_access_denied">Access Denied</h2>
         </div>
 
         <dl class="bp_status_panel">
