--- a/src/markup.html
+++ b/src/markup.html
@@ -86,7 +86,10 @@
             </div></li>
         </ul>
     </div>
-    <div class="bp_footer"></div>
+    <div class="bp_footer">
+        <div class="bp_remain_code_count"></div>
+        <div class="bp_exit"><a href="#">exit</a></div>
+    </div>
 </div>
 </body>
 </html>
