--- a/src/base.html
+++ b/src/base.html
@@ -60,7 +60,10 @@
         </div>
         -->
     </div>
-    <div class="bp_footer"></div>
+    <div class="bp_footer">
+        <div class="bp_remain_code_count"></div>
+        <div class="bp_exit"><a href="#">exit</a></div>
+    </div>
 </div>
 <script type="text/javascript" src="js/lib/require.js"></script>
 <script type="text/javascript" src="js/config.js"></script>
