--- a/src/base.html
+++ b/src/base.html
@@ -10,9 +10,7 @@
 <div class="bp_container">
     <div class="bp_header">
         <div class="bp_progresser">
-            <ul class="bp_progress">
-                <li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li>
-            </ul>
+            <ul class="bp_progress"></ul>
         </div>
         <div class="bp_pointer"></div>
     </div>
