descripter 철자 descriptor 로 변경

--- a/src/base.html
+++ b/src/base.html
@@ -14,7 +14,7 @@
         </div>
         <div class="bp_pointer"></div>
     </div>
-    <div class="bp_descripter">
+    <div class="bp_descriptor">
         <div class="bp_target_panel">
             <h2 class="bp_target_code">Target Code Segment</h2>
 
