--- a/src/markup.html
+++ b/src/markup.html
@@ -16,7 +16,7 @@
         </div>
         <div class="bp_pointer"></div>
     </div>
-    <div class="bp_descripter">
+    <div class="bp_descriptor">
         <div class="bp_target_panel">
             <h2 class="bp_target_code">Target Code Segment</h2>
 
