--- a/src/base.html
+++ b/src/base.html
@@ -58,8 +58,7 @@
         </div>
         -->
     </div>
-    <div class="bp_footer">
-    </div>
+    <div class="bp_footer"></div>
 </div>
 <script type="text/javascript" src="js/lib/require.js"></script>
 <script type="text/javascript" src="js/config.js"></script>
