빌드 스크립트 만듬

--- a/src/uitest.html
+++ b/src/uitest.html
@@ -29,8 +29,7 @@
     require(['jquery', 'underscore'], function ($, _) {
         _.each(testFiles, function (fileName) {
             var $link = $("<A>").attr({
-                "href" : "uitest.html?uitest=btest/" + fileName,
-                "target" : "_blank"
+                "href" : "uitest.html?uitest=btest/" + fileName
             }).html(fileName);
             $("<LI>").append($link).appendTo($("#test_links"));
         });
