--- a/output/bypass/hacking/index.html
+++ b/output/bypass/hacking/index.html
@@ -7,75 +7,11 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<div class="bp_container">
-    <div class="bp_header">
-        <div class="bp_progresser">
-            <ul class="bp_progress">
-                <li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li>
-            </ul>
-        </div>
-        <div class="bp_pointer"></div>
-    </div>
-    <div class="bp_descripter">
-        <div class="bp_target_panel">
-            <h2 class="bp_target_code">Target Code Segment</h2>
-
-            <div class="bp_segment">
-                <div>
-                    <img>
-                </div>
-            </div>
-
-            <h2 class="bp_firewall_removed">Firewalls removed, full access granted</h2>
-            <h2 class="bp_access_denied">Access Denied</h2>
-        </div>
-
-        <dl class="bp_status_panel">
-            <dt>
-                Remaining Code
-            </dt>
-            <dd>
-                <div>
-                    <div class="bp_cover"></div>
-                    <div class="img_container"><img src="img/codes/10.png"></div>
-                </div>
-                <div>
-                    <div class="bp_cover"></div>
-                    <div class="img_container"></div>
-                </div>
-                <div>
-                    <div class="bp_cover"></div>
-                    <div class="img_container"></div>
-                </div>
-            </dd>
-        </dl>
-    </div>
-    <div class="bp_slider">
-        <ul></ul>
-        <!--
-        <div class="bp_cursor">
-            <img class="bp_left" src="img/cursor_left.png">
-            <img class="bp_arrow" src="img/cursor_arrow.png">
-            <img class="bp_right" src="img/cursor_right.png">
-        </div>
-        -->
-    </div>
-    <div class="bp_footer">
-        <div class="bp_remain_code_count"></div>
-        <div class="bp_exit"><a href="#">exit</a></div>
-    </div>
-</div>
+<div class="bp_container"></div>
 <script type="text/javascript" src="js/lib/require.js"></script>
 <script type="text/javascript" src="js/config.js"></script>
 <script type="text/javascript">
-    if (location.search.indexOf("uitest") >= 0) {
-        require([location.search.substr(location.search.indexOf('=') + 1)]);
-    } else if (location.search.indexOf("test") >= 0) {
-        require(["app/test"]);
-    } else {
-        require(["app/base"]);
-    }
-
+    require(["app/base"]);
 </script>
 </body>
 </html>
