--- a/src/markup.html
+++ b/src/markup.html
@@ -84,6 +84,48 @@
                     <div class="bp_card_cover"></div><img src="img/codes/1.png">
                 </div>
             </div></li>
+            <li><div class="bp_card_outline">
+                <div class="bp_card bp_districted">
+                    <div class="bp_card_cover"></div><img src="img/codes/1.png">
+                </div>
+            </div><div class="bp_card_outline">
+                <div class="bp_card bp_districted bp_unauthorized_access">
+                    <div class="bp_card_cover"></div><img src="img/codes/1.png">
+                </div>
+            </div><div class="bp_card_outline">
+
+                <div class="bp_card">
+                    <div class="bp_card_cover"></div><img src="img/codes/1.png">
+                </div>
+            </div></li>
+            <li><div class="bp_card_outline">
+                <div class="bp_card bp_districted">
+                    <div class="bp_card_cover"></div><img src="img/codes/1.png">
+                </div>
+            </div><div class="bp_card_outline">
+                <div class="bp_card bp_districted bp_unauthorized_access">
+                    <div class="bp_card_cover"></div><img src="img/codes/1.png">
+                </div>
+            </div><div class="bp_card_outline">
+
+                <div class="bp_card">
+                    <div class="bp_card_cover"></div><img src="img/codes/1.png">
+                </div>
+            </div></li>
+            <li><div class="bp_card_outline">
+                <div class="bp_card bp_districted">
+                    <div class="bp_card_cover"></div><img src="img/codes/1.png">
+                </div>
+            </div><div class="bp_card_outline">
+                <div class="bp_card bp_districted bp_unauthorized_access">
+                    <div class="bp_card_cover"></div><img src="img/codes/1.png">
+                </div>
+            </div><div class="bp_card_outline">
+
+                <div class="bp_card">
+                    <div class="bp_card_cover"></div><img src="img/codes/1.png">
+                </div>
+            </div></li>
         </ul>
     </div>
     <div class="bp_footer">
