--- a/src/js/bui/descriptor/statusPanelViewTemplate.html
+++ b/src/js/bui/descriptor/statusPanelViewTemplate.html
@@ -1,17 +1,22 @@
-<dt>
-    Remaining Code
-</dt>
-<dd>
-    <div>
-        <div class="bp_cover"></div>
-        <div class="img_container"><img src="img/codes/10.png"></div>
-    </div>
-    <div>
-        <div class="bp_cover"></div>
-        <div class="img_container"></div>
-    </div>
-    <div>
-        <div class="bp_cover"></div>
-        <div class="img_container"></div>
-    </div>
-</dd>
+<div class="bp_start_area">
+    <button class="bp_button">Start</button>
+</div>
+<dl>
+    <dt>
+        Remaining Code
+    </dt>
+    <dd>
+        <div>
+            <div class="bp_cover"></div>
+            <div class="img_container"><img src="img/codes/10.png"></div>
+        </div>
+        <div>
+            <div class="bp_cover"></div>
+            <div class="img_container"></div>
+        </div>
+        <div>
+            <div class="bp_cover"></div>
+            <div class="img_container"></div>
+        </div>
+    </dd>
+</dl>
