--- a/src/markup.html
+++ b/src/markup.html
@@ -30,25 +30,30 @@
             <h2 class="bp_access_denied">Access Denied</h2>
         </div>
 
-        <dl class="bp_status_panel">
-            <dt>
-                Remaining Code
-            </dt>
-            <dd>
-                <div>
-                    <div class="bp_cover"></div>
-                    <div class="img_container"><img src="img/codes/10.png"></div>
-                </div>
-                <div>
-                    <div class="bp_cover"></div>
-                    <div class="img_container"></div>
-                </div>
-                <div>
-                    <div class="bp_cover"></div>
-                    <div class="img_container"></div>
-                </div>
-            </dd>
-        </dl>
+        <div class="bp_status_panel">
+            <div class="bp_start_area">
+                <button class="bp_button">Start</button>
+            </div>
+            <dl>
+                <dt>
+                    Remaining Code
+                </dt>
+                <dd>
+                    <div>
+                        <div class="bp_cover"></div>
+                        <div class="img_container"><img src="img/codes/10.png"></div>
+                    </div>
+                    <div>
+                        <div class="bp_cover"></div>
+                        <div class="img_container"></div>
+                    </div>
+                    <div>
+                        <div class="bp_cover"></div>
+                        <div class="img_container"></div>
+                    </div>
+                </dd>
+            </dl>
+        </div>
     </div>
     <div class="bp_slider">
         <ul>
