design enhancement 작업 중간 저장

--- a/src/js/bui/descriptor/statusPanelViewTemplate.html
+++ b/src/js/bui/descriptor/statusPanelViewTemplate.html
@@ -1,5 +1,5 @@
 <div class="bp_start_area">
-    <button class="bp_button">Start</button>
+    <button class="bp_button">Start Hack</button>
 </div>
 <dl>
     <dt>
