이미지 추가 + 메시지 두개쯤 추가

--- a/src/markup.html
+++ b/src/markup.html
@@ -134,7 +134,7 @@
         </ul>
     </div>
     <div class="bp_footer">
-        <div class="bp_remain_code_count"></div>
+        <div class="bp_remaining_attempts"><span class="bp_number bp_3">3</span><span class="bp_background">attempt(s) remaining</span></div>
         <div class="bp_exit"><a href="#">exit</a></div>
     </div>
 </div>
