이미지 추가 + target_panel 마크업 개선 작업진행중

--- a/src/markup.html
+++ b/src/markup.html
@@ -16,6 +16,17 @@
         </div>
         <div class="bp_pointer"></div>
     </div>
+    <div class="bp_description_panel">
+        <div class="bp_target_panel_area">
+            <h2 class="bp_target_code">Target Code Segment</h2>
+            <div class="bp_segment">
+                    <img src="img/codes/3.png">
+            </div>
+            <h2 class="bp_firewall_removed">Firewalls removed, full access granted</h2>
+            <h2 class="bp_access_denied">Access Denied</h2>
+        </div>
+        <div class="bp_status_panel_area"></div>
+    </div>
     <div class="bp_descriptor">
         <div class="bp_target_panel">
             <h2 class="bp_target_code">Target Code Segment</h2>
