이미지 추가 + header, footer 이미지 교체

--- a/src/markup.html
+++ b/src/markup.html
@@ -25,7 +25,26 @@
             <h2 class="bp_firewall_removed">Firewalls removed, full access granted</h2>
             <h2 class="bp_access_denied">Access Denied</h2>
         </div>
-        <div class="bp_status_panel_area"></div>
+        <div class="bp_status_panel_area">
+            <div class="bp_start_area">
+                <button class="bp_button">Start Hack</button>
+            </div>
+            <h3 class="bp_remaining_code">Remaining Code</h3>
+            <div>
+                <div>
+                    <div class="bp_cover"></div>
+                    <div class="img_container"><img src="img/codes/10.png"></div>
+                </div>
+                <div>
+                    <div class="bp_cover"></div>
+                    <div class="img_container"></div>
+                </div>
+                <div>
+                    <div class="bp_cover"></div>
+                    <div class="img_container"></div>
+                </div>
+            </div>
+        </div>
     </div>
     <div class="bp_descriptor">
         <div class="bp_target_panel">
